adding tests, one of which fails (due to lack of familiarity with laravel) but which should run the example code in the readme

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "psr-4": {
             "Larapack\\ConfigWriter\\": "src/"
         }
+    },
+    "require-dev": {
+        "laravel/framework": "^5.3"
     }
 }
